Implemented testing
Testing for the question generation functionality